--- a/Romanian/main/CleanMaster.apk/res/values-ro/strings.xml
+++ b/Romanian/main/CleanMaster.apk/res/values-ro/strings.xml
@@ -96,6 +96,9 @@
     <string name="confirm_auto_cleaner">OK</string>
     <string name="conn_of_function_safe">Conexiune la rețea</string>
     <string name="connecting">Conectare…</string>
+    <string name="deep_clean_data_path_clean_title">Golire memorie internă</string>
+    <string name="deep_clean_normal_clean_progress_desc">au fost curățate %1$s fișiere</string>
+    <string name="deepclean_1_k_clean">Curățare printr-un click</string>
     <string name="deepclean_apk_content">Ștergeți fișierele .apk sau aplicațiile inutile</string>
     <string name="deepclean_apk_summary_empty">Totul arată bine, nu există fișiere .apk ce trebuie șterse</string>
     <string name="deepclean_apk_version_error">Necunoscută</string>
@@ -113,11 +116,16 @@
     <string name="deepclean_list_item_from_miui">MIUI</string>
     <string name="deepclean_list_item_from_music">Muzică</string>
     <string name="deepclean_list_item_from_sdcard">Card SD</string>
+    <string name="deepclean_normal_item_desc1">Curățare generală</string>
+    <string name="deepclean_normal_item_desc2">"Poate fi curățat"</string>
+    <string name="deepclean_normal_item_summary_empty">Totul arată bine; nu există nimic de curățat</string>
+    <string name="deepclean_normal_title">Curățare automată</string>
     <string name="deepclean_similar_ignore">Ignoraţi</string>
     <string name="deepclean_similar_summary_empty">Totul arată bine, nu există fotografii ce trebuie șterse</string>
-    <string name="deepclean_size_summary_less">Spațiu insuficient</string>
+    <string name="deepclean_size_summary_less">Foarte puțin spațiu de stocare disponibil</string>
     <string name="deepclean_size_summary_more">Suficient spațiu de stocare disponibil</string>
     <string name="deepclean_size_summary_normal">Spațiu de stocare disponibil</string>
+    <string name="deepclean_size_summary_not_enough">Spațiul de stocare este insuficient</string>
     <string name="deepclean_title_large_file">Ştergeţi fişierele mari</string>
     <string name="deepclean_title_uninstall_apps">Aplicaţii utilizate rar</string>
     <string name="deepclean_video_content">Ștergeți videoclipurile vizionate deja sau pe cele inutile</string>
@@ -245,6 +253,13 @@
     <string name="login_immediately">Conectare</string>
     <string name="long_click_dialog_summary">Apăsați lung pentru a adăuga în lista de excepții.</string>
     <string name="long_click_dialog_title">Aviz</string>
+    <string name="low_memory_clean_dialog_msg">Trebuie să curățați mai întâi cel puțin %1$s fișiere</string>
+    <string name="low_memory_clean_dialog_ok_button">OK</string>
+    <string name="low_memory_clean_dialog_title">NU mai există spațiu de stocare disponibil</string>
+    <string name="low_memory_warning_dialog_cancel_button">Renunțați</string>
+    <string name="low_memory_warning_dialog_msg">Nu mai există spațiu de stocare disponibil pe telefon; trebuie să ștergeți câteva fișiere mai întâi</string>
+    <string name="low_memory_warning_dialog_ok_button">Curățați</string>
+    <string name="low_memory_warning_dialog_title">Spațiul de stocare de pe telefon este epuizat</string>
     <string name="mainbtn_text_quick_cleanup">Curăţaţi %s</string>
     <string name="mainbtn_text_quick_cleanup_default">Curățare</string>
     <string name="megabyteShort">MB</string>
@@ -344,7 +359,7 @@
     <string name="similar_image_title">Fotografii</string>
     <string name="sms">SMS/MMS</string>
     <string name="sponsored">Sponsorizate</string>
-    <string name="start_downloading_app">A început descărcarea pentru： %1$s</string>
+    <string name="start_downloading_app">A început descărcarea pentru: %1$s</string>
     <string name="start_install">Instalați acum</string>
     <string name="summary_auto_cleaner">Curățați sistemul în mod automat la fiecare 3 zile?</string>
     <string name="summary_delete_apk">Ștergeți definitiv fișierele .apk selectate?</string>
